fix layout bugs

--- a/app/assets/stylesheets/modules/mobile-best-product.sass
+++ b/app/assets/stylesheets/modules/mobile-best-product.sass
@@ -9,3 +9,7 @@
     +rhombus_1
 .square 
   margin-bottom: 10px
+.best-products.constrained 
+  margin-left: -20px
+  .square
+    margin-left: 20px
